--- a/SemanticComponent/src/com/sd/semantic/components/sText.mxml
+++ b/SemanticComponent/src/com/sd/semantic/components/sText.mxml
@@ -14,7 +14,7 @@
   
   @author Frederick Giasson, Structured Dynamics LLC.
 -->
-<mx:Text xmlns:mx = "http://www.adobe.com/2006/mxml" creationComplete = "init()" width="100%" height="100%" styleName="sText">
+<mx:Text xmlns:mx = "http://www.adobe.com/2006/mxml" width="100%" height="100%" styleName="sText">
   <mx:Script>
     <![CDATA[
     import com.sd.semantic.core.Namespaces;
@@ -61,12 +61,14 @@
     public function set semanticDataProvider(value:Resultset):void
     {
       _semanticDataProvider = value;
+      
+      init();
     }
     
     /** Specifies what attribute(s) of a record have been bound to this semantic component */  
     public var boundAttributes:Array = new Array();
 
-    /** Initialize the sText component */
+    /** Initialize the sText component with a new text string to display */
     private function init():void
     {
       var checkForTargetAttributes:Boolean = false;
@@ -90,6 +92,12 @@
   
             /** Remove the "[[" and "]]" markup from the string */
             boundVar = boundVar.substr(2, boundVar.length - 4);
+            
+            /** 
+            * We add the bound variables in the targetAttributes array. We consider that these bound
+            * variables are in fact targetAttributes defined by the user.
+            */
+            targetAttributes.push(boundVar);
   
             /** Keep track of the attributes, from the record, that have been bound to this control. */
             boundAttributes.push(boundVar);
