--- a/SemanticComponent/src/com/sd/semantic/components/sText.mxml
+++ b/SemanticComponent/src/com/sd/semantic/components/sText.mxml
@@ -14,7 +14,7 @@
   
   @author Frederick Giasson, Structured Dynamics LLC.
 -->
-<mx:Text xmlns:mx = "http://www.adobe.com/2006/mxml" width="100%" height="100%" styleName="sText">
+<mx:Text xmlns:mx = "http://www.adobe.com/2006/mxml" width="100%" height="100%" creationComplete = "init()" styleName="sText">
   <mx:Script>
     <![CDATA[
     import com.sd.semantic.core.Namespaces;
@@ -62,12 +62,19 @@
     {
       _semanticDataProvider = value;
       
-      init();
+      /** If the value of the data provider changes, we re-initialize the sImage control. */
+      if(_initialized) /** Make sure the control has been initialized a first time */
+      {
+        init();
+      }
     }
     
     /** Specifies what attribute(s) of a record have been bound to this semantic component */  
     public var boundAttributes:Array = new Array();
 
+    /** Specifies if the component has already been initialized or not. */
+    private var _initialized:Boolean = false;
+      
     /** Initialize the sText component with a new text string to display */
     private function init():void
     {
@@ -182,6 +189,8 @@
           return;
         }
       }
+      
+      _initialized = true;
     }
 
     ]]>
