Re-initialize the results list each time a new search is performed.

--- a/structSearch/src/structSearch.mxml
+++ b/structSearch/src/structSearch.mxml
@@ -106,6 +106,7 @@
     private function displayResults(rset:XML):void
     {
       /** Re-initialize the result box */
+      resultsetItems = [];
       
       /** list of unique attributes defining subjects of the resultset */
       var uniqueAttributes:ArrayCollection = new ArrayCollection();
