--- a/SemanticComponent/src/com/sd/semantic/components/sLinearChart.mxml
+++ b/SemanticComponent/src/com/sd/semantic/components/sLinearChart.mxml
@@ -264,7 +264,7 @@
           }
         }
         
-        comparableOrderingValues.sortOn("orderingValue");
+        comparableOrderingValues.sortOn("orderingValue", Array.NUMERIC);
   
         /** Populate the columns with the prefLabel of the records */
         
@@ -293,7 +293,7 @@
         */
         for each(var attr:Object in comparableOrderingValues)
         {
-          csv = csv + attr.shortLabel + ",";
+          csv = csv + '"' + attr.shortLabel + '"' + ",";
           
           /** Get the value for the attribute for each record */
           for each(var subject:Subject in _semanticDataProvider.subjects)
@@ -302,7 +302,7 @@
             
             if(values && values.length > 0)
             {
-              csv = csv + values[0].value + ",";
+              csv = csv + '"' + values[0].value + '"' + ",";
             }
             else
             {
@@ -334,7 +334,22 @@
     /** Format the attribute labels properly on the axis */
     private function axisLabel(obj:Object):String
     {
-      return(formatter.format(Number(obj) / 1000));
+      if(Number(obj) < 10)
+      {
+        return(formatter0to10.format(Number(obj)));
+      }
+      else if(Number(obj) >= 10 && Number(obj) < 100)
+      {
+        return(formatter10to100.format(Number(obj)));
+      }
+      else if(Number(obj) >= 100 && Number(obj) < 10000)
+      {
+        return(formatter100to10000.format(Number(obj)));
+      }
+      else
+      {
+        return(formatter10000andOver.format(Number(obj) / 1000));
+      }
     }
     
     /** Line mouse click event handler */    
@@ -439,9 +454,15 @@
   <mx:Number id="percentGap">.02
   </mx:Number>
 
-  <mx:CurrencyFormatter currencySymbol="k" precision="0" id="formatter" alignSymbol="right"
-    useThousandsSeparator="true"/>
 
+  
+  <mx:CurrencyFormatter precision="2" id="formatter0to10" alignSymbol="right" currencySymbol=""/>
+  <mx:CurrencyFormatter precision="1" id="formatter10to100" alignSymbol="right" currencySymbol=""/>
+  <mx:CurrencyFormatter precision="0" id="formatter100to10000" alignSymbol="right" currencySymbol=""
+                        useThousandsSeparator="true"/>
+  <mx:CurrencyFormatter currencySymbol="k" precision="0" id="formatter10000andOver" alignSymbol="right"
+                        useThousandsSeparator="true"/>
+  
   <!--- Linear Chart -->
 
   <!--- 
@@ -454,7 +475,7 @@
   -->
   <scales:CategoricalScale id="hScale" minLayout="0" maxLayout="{myLineGroup.width}"/>
   <!--- Canvas holding the chart lines -->
-  <axiis:DataCanvas width="{this.width*.85}" id="dc" top="30" bottom="30" horizontalCenter="0" strokes="{strokes}"
+  <axiis:DataCanvas width="{this.width*.75}" id="dc" top="30" bottom="30" horizontalCenter="0" strokes="{strokes}"
     fills="{fills}" palettes="{palettes}" showDataTips="true">
 
     <!--- Background of the chart -->
@@ -484,13 +505,35 @@
 
   <!---  FILLS &amp; STROKES -->
 
+  <mx:Array id="palletsColors">
+    <mx:uint>0xFFeb0810</mx:uint>
+    <mx:uint>0xFFf5800b</mx:uint>
+    <mx:uint>0xFFf4e601</mx:uint>
+    <mx:uint>0xFFc6d816</mx:uint>
+    <mx:uint>0xFF0c5e2c</mx:uint>
+    <mx:uint>0xFF00a5d9</mx:uint>
+    <mx:uint>0xFF581886</mx:uint>
+    <mx:uint>0xFFab1057</mx:uint>
+  </mx:Array>  
+  
+  <mx:Array id="textPalletsColors">
+    <mx:uint>0xFF000000</mx:uint>
+  </mx:Array>  
+  
   <mx:Array id="palettes">
-    <paint:LayoutAutoPalette id="outerPalette" layout="{myLineGroup}" colorFrom="0xCC3333" colorTo="0x3333CC"/>
+    <!--paint:LayoutAutoPalette id="outerPalette" layout="{myLineGroup}" colorFrom="0xCC3333" colorTo="0x3333CC"/>
 
     <paint:LayoutAutoPalette id="clusterPalette" layout="{myLineGroup}" colorFrom="{outerPalette.currentColor}"
       colorTo="{outerPalette.currentColor | 0x337f00}"/>
 
-    <paint:LayoutAutoPalette id="areaPalette" layout="{myLineGroup}" colorFrom="0x3333CC" colorTo="0xCC3333"/>
+    <paint:LayoutAutoPalette id="areaPalette" layout="{myLineGroup}" colorFrom="0x3333CC" colorTo="0xCC3333"/-->
+    
+    <paint:LayoutPalette id="outerPalette" layout="{myLineGroup}" colors="{textPalletsColors}"/>
+    
+    <paint:LayoutPalette id="clusterPalette" layout="{myLineGroup}" colors="{palletsColors}"/>
+    
+    <paint:LayoutPalette id="areaPalette" layout="{myLineGroup}" colors="{palletsColors}"/>    
+    
   </mx:Array>
 
   <mx:Array id="fills">
